--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
-<!-- wp:template-part {"slug":"header","area":"header"} /-->
+<!-- wp:template-part {"slug":"header","theme":"crops","area":"header"} /-->
 
-<!-- wp:post-content /-->
+<!-- wp:group {"layout":{"type":"constrained","wideSize":"1400px"}} -->
+<div class="wp-block-group"><!-- wp:post-content /--></div>
+<!-- /wp:group -->
 
-<!-- wp:template-part {"slug":"footer","area":"footer"} /-->
+<!-- wp:template-part {"slug":"footer","theme":"crops","area":"footer"} /-->
