--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
 <!-- wp:post-excerpt {"excerptLength":50,"style":{"spacing":{"padding":{"top":"0","bottom":"0"}}}} /--></div>
 <!-- /wp:group -->
 
-<!-- wp:read-more /--></div>
+<!-- wp:read-more {"content":"Lire l'article -\u003e"} /--></div>
 <!-- /wp:group --></div>
 <!-- /wp:column --></div>
 <!-- /wp:columns -->
@@ -30,7 +30,7 @@
 <!-- /wp:query --></main>
 <!-- /wp:group -->
 
-<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0","bottom":"var:preset|spacing|xl"},"padding":{"top":"var:preset|spacing|xl","bottom":"var:preset|spacing|xl"}}},"layout":{"type":"constrained","wideSize":"1400px","contentSize":"1140px"}} -->
+<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0","bottom":"var:preset|spacing|xl"},"padding":{"top":"var:preset|spacing|xl","bottom":"var:preset|spacing|xl"},"blockGap":"var:preset|spacing|l"}},"layout":{"type":"constrained","wideSize":"1400px","contentSize":"1140px"}} -->
 <main class="wp-block-group" style="margin-top:0;margin-bottom:var(--wp--preset--spacing--xl);padding-top:var(--wp--preset--spacing--xl);padding-bottom:var(--wp--preset--spacing--xl)"><!-- wp:heading {"align":"wide"} -->
 <h2 class="wp-block-heading alignwide">Derniers articles publiés</h2>
 <!-- /wp:heading -->
