--- a/templates/front-page.html
+++ b/templates/front-page.html
@@ -228,7 +228,7 @@
 
 <!-- wp:buttons -->
 <div class="wp-block-buttons"><!-- wp:button -->
-<div class="wp-block-button"><a class="wp-block-button__link wp-element-button">Voir tous les événements</a></div>
+<div class="wp-block-button"><a class="wp-block-button__link wp-element-button" href="/event">Voir tous les événements</a></div>
 <!-- /wp:button --></div>
 <!-- /wp:buttons --></div>
 <!-- /wp:group -->
